 - Fix parsing xml data containing simpleContent types (#136). 
 - Set xsi:nil attribute when serializing objects to xml (#141)
 - Fix rendering choice elements when the element is mixed with other elements
   in a sequence (#150)
 - Fix maximum recursion error for recursive xsd:include elements
 - Make wsdl:import statements transitive. (#149)


0.13.0 (2016-07-17)
-------------------
 - Use warnings.warn() for duplicate target namespaces instead of raising an
   exception. This better matches with what lxml does.
 - **backwards-incompatible**: The ``persistent`` kwarg is removed from the
   SqliteCache.__init__() call. Use the new InMemoryCache() instead when you
   don't want to persist data. This was required to make the SqliteCache 
   backend thread-safe since we now open/close the db when writing/reading 
   from it (with an additional lock).
 - Fix zeep.helpers.serialize_object() for nested objects (#123)
 - Remove fallback between soap 1.1 and soap 1.2 namespaces during the parsing
   of the wsdl. This should not be required.


0.12.0 (2016-07-09)
-------------------
 - **backwards-incompatible**: Choice elements are now unwrapped if 
   maxOccurs=1. This results in easier operation definitions when choices are
   used. 
 - **backwards-incompatible**: The _soapheader kwarg is renamed to _soapheaders
   and now requires a nested dictionary with the header name as key or a list
   of values (value object or lxml.etree.Element object). Please see the 
   call signature of the function using ``python -mzeep <wsdl>``.
 - Support the element ref's to xsd:schema elements.
 - Improve the signature() output of element and type definitions
 - Accept lxml.etree.Element objects as value for Any elements.
 - And various other fixes
 

0.11.0 (2016-07-03)
-------------------
 - **backwards-incompatible**: The kwarg name for Any and Choice elements are
   renamed to generic ``_value_N`` names.
 - **backwards-incompatible**: Client.set_address() is replaced with the 