@@ -7,6 +7,7 @@
    in a sequence (#150)
  - Fix maximum recursion error for recursive xsd:include elements
  - Make wsdl:import statements transitive. (#149)
+ - Merge xsd:schema's which are spread around imported wsdl objects. (#146)
 
 
 0.13.0 (2016-07-17)
